requer finalização do estagio inicial

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
 <title>Acess: Granted</title>
-<link type="stylesheet" href="styles.css">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+<button class="btrnsim" style="border: 0cap, transparent;">Run Simulation</button>
 </body>
